# gst-plugins-vision

./: CMakeLists.txt
cmake/modules/: FindBC63XPCI.cmake
sys/: CMakeLists.txt
sys/bc63xpci/: CMakeLists.txt  gstbc63xclock.c  gstbc63xclock.h
sys/bc63xpci/app/: demo.c
